kubernetes/apps/monitor/kube-prometheus-stack/app/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitor
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "prometheus.${SECRET_DOMAIN}"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`prometheus.${SECRET_DOMAIN}`)"
      middlewares:
        - name: network-error-pages@kubernetescrd
        - name: network-internal-only@kubernetescrd
        - name: network-default-middlewares@kubernetescrd
        # - name: network-middlewares-authentik@kubernetescrd
      services:
        - kind: Service
          name: prometheus
          port: 9090
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: "${SECRET_DOMAIN/./-}-monitor-tls"
